--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -22,20 +22,20 @@ jobs:
         script:
           - build-zlib
           - build-x264
-          - build-x265
+            #- build-x265
           - build-libvpx
-          - build-wavpack
-          - build-lame
+            #- build-wavpack
+            #- build-lame
           - build-fdk-aac
-          - build-ogg
+            #- build-ogg
           - build-vorbis
-          - build-theora
+            #- build-theora
           - build-opus
-          - build-libwebp
-          - build-freetype2
-          - build-fribidi
-          - build-harfbuzz
-          - build-libass
+            #- build-libwebp
+            #- build-freetype2
+            #- build-fribidi
+            #- build-harfbuzz
+            #- build-libass
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
